rename the main component prefix all components with stc instead of app

--- a/src/index.html
+++ b/src/index.html
@@ -99,11 +99,11 @@
 </head>
 <body>
 
-<app-root>
+<stc-root>
   <div class="loader-container">
     <div class="loader">Loading...</div>
   </div>
-</app-root>
+</stc-root>
 
 </body>
 </html>
